--- a/preamble.tex
+++ b/preamble.tex
@@ -12,7 +12,8 @@
 
 \setCJKmainfont[BoldFont=Songti SC Bold]{Songti SC Regular}
 \setCJKsansfont{Heiti SC}
-\setCJKmonofont{Courier}
+%\setCJKmonofont{Courier}
+\setCJKmonofont{Songti SC}
 
 \newcommand{\figc}[2]{
 \begin{figure}[H]\begin{center}
